--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
+    "deck.gl": "^7.3.6",
     "google-map-react": "^1.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
     "react-icons": "^3.8.0",
     "react-infinite-scroll-component": "^5.0.4",
+    "react-map-gl": "^5.1.3",
+    "react-perfect-scrollbar": "^1.5.3",
     "react-scripts": "3.3.0",
     "reactstrap": "^8.1.1"
   },
